(library
 (name wasmtime)
 (public_name wasmtime)
 (foreign_stubs
  (language c)
  (names wasm_stubs ocaml_helpers)
  (flags
   (:include c_flags.sexp)))
 (foreign_archives wasmtime)
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))

(rule
 (target wasm.h)
 (action
  (copy ../vendor/%{system}/include/wasm.h wasm.h)))

(rule
 (target libwasmtime.a)
 (action
  (copy ../vendor/%{system}/lib/libwasmtime.a libwasmtime.a)))

(rule
 (target dllwasmtime.so)
 (enabled_if
  (= %{system} macosx))
 (action
  (copy ../vendor/%{system}/lib/libwasmtime.dylib dllwasmtime.so)))

(rule
 (target dllwasmtime.so)
 (enabled_if
  (= %{system} linux))
 (action
  (copy ../vendor/%{system}/lib/libwasmtime.so dllwasmtime.so)))

(rule
 (target dllwasmtime.dll)
 (enabled_if
  (= %{system} mingw64))
 (action
  (copy ../vendor/%{system}/lib/wasmtime.dll dllwasmtime.dll)))
